<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentScholarBenifits"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorDark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="BENEFITS OF THIS PROGRAM"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:padding="16dp"
        android:layout_marginTop="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/fadeblue"
                android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" -->  What you can expect from it ?"
                android:layout_marginTop="10dp"
                android:textColor="@color/darkgreen"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expect1"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/expect1"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expect2"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/expect2"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expect3"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/expect3"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expect4"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/expect4"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" -->  Requirements : "
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/req1"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/require1"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/req2"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/require2"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" -->  WEBSITE OF THEIR PORTAL  : "
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_benefit_link1"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/website"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
    </ScrollView>
    </LinearLayout>
</LinearLayout>