<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentScholarPreparation"
    android:padding="16dp"
    android:id="@+id/linear"
    android:orientation="vertical"
    android:background="@color/colorDark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="PREPARATION MATERIAL FOR THIS PROGRAM"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:padding="16dp"
        android:layout_marginTop="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/fadeblue"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" -->  Free resources : "
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="==>  Java tutorial :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/expect1"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" # YouTube link:"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/expect2"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_prep_link1"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/link1"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="==>  C++ tutorial :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" # YouTube link:"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_prep_link2"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/link2"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="==>  C tutorial :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" # YouTube link:"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_prep_link3"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/link3"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="==>  DSA :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" # YouTube link:"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_prep_link4"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/link4"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="==>  Preparation strategy guided video :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_prep_link5"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/link5"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="==>  Strategy by previous scholars article link :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_prep_link6"
                    android:textColor="@color/darkgreen"
                    android:id="@+id/link6"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>