<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentScholarResources"
    android:padding="16dp"
    android:id="@+id/scholarResource"
    android:orientation="vertical"
    android:background="@color/colorDark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="RESOURCES : "
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:layout_marginTop="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/fadeblue"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" -->  TELEGRAM LINK FOR GUIDANCE IN THIS PROGRAM :  "
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_res_link1"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/telegram"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" -->  DISCORD LINK FOR GUIDANCE IN THIS PROGRAM : "
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_res_link2"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/discord"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" --> MENTORS : "
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ISHAN SHARMA :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor1"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Linkdin Id :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor1LinkName"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_res_link3"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor1linkid"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="GitHub link :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor1GitName"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_res_link4"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor1gitid"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="KUNAL KUSHWAHA :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor2"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Linkdin Id :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor2LinkName"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_res_link5"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor2linkid"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="GitHub link :"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor2GitName"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sch_res_link6"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/mentor2gitid"
                    android:textStyle="italic"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" --> SUGGESTION  : "
                    android:layout_marginTop="10dp"
                    android:textColor="@color/darkgreen"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/askques"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:hint=" Type Here "
                    android:textColor="@color/brown"
                    android:textSize="18dp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Do our best to add your suggestion :)"
                    android:textColor="@color/brown"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="18dp"
                    android:id="@+id/sugg"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal" />

                <Button
                    android:id="@+id/btn_sugg"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_horizontal"
                    android:text="SUBMIT"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorLight"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>